@@ -1,7 +1,16 @@
 #!/usr/bin/env bash
 
-# notifications received from service HACKER_INTERCEPT_SERVICE_APP
-# MASTER COPY is in Eiffel-Loop/Bash_library
+# MASTER COPY of this script is in: Eiffel-Loop/Bash_library
+
+# Description: 
+#	Notifications received from service HACKER_INTERCEPT_SERVICE_APP
+
+# author: "Finnian Reilly"
+# copyright: "Copyright (c) 2011-2025 Finnian Reilly"
+# contact: "finnian at eiffel hyphen loop dot com"
+
+# license: "MIT license (See: en.wikipedia.org/wiki/MIT_License)"
+
 
 domain_name=$1
 name=${domain_name%%.*}
@@ -18,6 +27,13 @@ if [[ ! -e "$txt_path" ]]; then
 	touch "$txt_path"
 fi
 
+# Dry run on dev machine
+if [[ "$(hostname)" != "$domain_name" ]]; then
+	dry_run="True"
+else
+	unset dry_run
+fi
+
 echo "Listening for changes to: $txt_path"
 
 while inotifywait -q -e close_write $txt_path 1>/dev/null; do
@@ -32,19 +48,17 @@ while inotifywait -q -e close_write $txt_path 1>/dev/null; do
 		IFS=':' read -ra part <<< "$line"
 		command=${part[0]}; ip=${part[1]}; port=${part[2]}
 
-		if [[ "$ip" != "0.0.0.0" ]]
-		then
-			if [[ "$command" == "block" ]]
-			then
+		if [[ "$ip" != "0.0.0.0" ]]; then
+			if [[ "$command" == "block" ]]; then
 				cmd="ufw insert 1 deny from $ip to any port $port"
 			else
 				cmd="ufw delete deny from $ip to any port $port"
 			fi
 			echo $cmd
-			if [[ "$2" != "-test" ]]
-			then
+			# if not a dry run on dev machine
+			if [[ ! -v dry_run ]]; then
 				# log command
-				echo $cmd >> /var/log/ip_address_blocking.log
+				echo $(date) $cmd >> /var/log/ip_address_blocking.log
 				# execute command
 				$cmd
 			fi
